Use BooleanInstruction approach for getting fasttrack questions