@@ -1,6 +1,5 @@
 package uk.ac.cam.cl.dtg.isaac.api.managers;
 
-import com.google.api.client.util.Lists;
 import com.google.api.client.util.Maps;
 import com.google.inject.Inject;
 import org.slf4j.Logger;
@@ -18,12 +17,10 @@ import uk.ac.cam.cl.dtg.segue.search.MatchInstruction;
 import uk.ac.cam.cl.dtg.util.AbstractConfigLoader;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.*;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.*;
@@ -113,24 +110,25 @@ public class FastTrackManger {
     private List<ContentDTO> getFastTrackConceptQuestions(
             final String boardTag, final List<FASTTRACK_LEVEL> levelFilters, final String conceptTitle
     ) throws ContentManagerException {
-        List<String> stringLevelFilters = levelFilters.stream().map(FASTTRACK_LEVEL::name).collect(Collectors.toList());
+        List<String> stringLevelFilters = levelFilters.stream().map(FASTTRACK_LEVEL::name).toList();
+        BooleanInstruction searchInstruction = new BooleanInstruction();
 
-        List<GitContentManager.BooleanSearchClause> fieldsToMap = Lists.newArrayList();
-        fieldsToMap.add(new GitContentManager.BooleanSearchClause(
-                TYPE_FIELDNAME, Constants.BooleanOperator.OR, QUESTION_PAGE_TYPES));
-        fieldsToMap.add(new GitContentManager.BooleanSearchClause(
-                TITLE_FIELDNAME + "." + UNPROCESSED_SEARCH_FIELD_SUFFIX, Constants.BooleanOperator.AND,
-                Collections.singletonList(conceptTitle)));
-        fieldsToMap.add(new GitContentManager.BooleanSearchClause(
-                TAGS_FIELDNAME, Constants.BooleanOperator.AND, Collections.singletonList(boardTag)));
-        fieldsToMap.add(new GitContentManager.BooleanSearchClause(
-                TAGS_FIELDNAME, Constants.BooleanOperator.OR, stringLevelFilters));
+        for (String type : QUESTION_PAGE_TYPES) {
+            searchInstruction.should(new MatchInstruction(TYPE_FIELDNAME, type));
+        }
+        for (String levelFilter : stringLevelFilters) {
+            searchInstruction.should(new MatchInstruction(TAGS_FIELDNAME, levelFilter));
+        }
+        searchInstruction.must(new MatchInstruction(TITLE_FIELDNAME + "." + UNPROCESSED_SEARCH_FIELD_SUFFIX, conceptTitle));
+        searchInstruction.must(new MatchInstruction(TAGS_FIELDNAME, boardTag));
+
 
         Map<String, Constants.SortOrder> sortInstructions = Maps.newHashMap();
         sortInstructions.put(ID_FIELDNAME + "." + UNPROCESSED_SEARCH_FIELD_SUFFIX, Constants.SortOrder.ASC);
 
-        return this.contentManager
-                .findByFieldNames(fieldsToMap, 0, SEARCH_MAX_WINDOW_SIZE, sortInstructions)
-                .getResults();
+        ResultsWrapper<ContentDTO> results = this.contentManager
+                .nestedMatchSearch(searchInstruction, 0, SEARCH_MAX_WINDOW_SIZE, null, sortInstructions);
+
+        return results.getResults();
     }
 }
